--- a/config/database.yml
+++ b/config/database.yml
@@ -11,15 +11,15 @@ default: &default
 
 development:
   <<: *default
-  database: twitch-deck_development
+  database: twitchdeck_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: twitch-deck_test
+  database: twitchdeck_test
 
 production:
   <<: *default
-  database: twitch-deck_production
+  database: twitchdeck_production
